Nancy/Nancy.Expressions/Grammar/NetCalGParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/andre/Documents/GitHub/nancy-expressions/Nancy.Expressions/Nancy.Expressions/Grammar/NetCalG.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419


#pragma warning disable 3021

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class NetCalGParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, CONV=6, DECONV=7, MAXPLUSCONV=8, 
		MAXPLUSDECONV=9, ADD=10, SUB=11, MIN=12, MAX=13, COMP=14, NON_DECREASING=15, 
		NON_NEGATIVE=16, SUBADDITIVE=17, CONVEX=18, CONCAVE=19, LEFT_CONTINUOUS=20, 
		RIGHT_CONTINUOUS=21, ZERO_AT_ZERO=22, ULTIMATELY_CONSTANT=23, WELL_DEFINED=24, 
		U_SET=25, RATIONALS=26, GREATER_OR_EQUAL=27, LESS_THAN_OR_EQUAL=28, EQUAL=29, 
		IN=30, ID=31, SEMICOLON=32, NEWLINE=33, WHITESPACE=34;
	public const int
		RULE_equivalenceCatalog = 0, RULE_equivalence = 1, RULE_equivalenceExpression = 2, 
		RULE_hypothesis = 3, RULE_set = 4, RULE_placeholder = 5, RULE_property = 6, 
		RULE_curveExpression = 7, RULE_constantCurve = 8, RULE_relationalOperator = 9;
	public static readonly string[] ruleNames = {
		"equivalenceCatalog", "equivalence", "equivalenceExpression", "hypothesis", 
		"set", "placeholder", "property", "curveExpression", "constantCurve", 
		"relationalOperator"
	};

	private static readonly string[] _LiteralNames = {
		null, "'{'", "'}'", "'==>'", "'('", "')'", null, null, null, null, "'+'", 
		"'-'", null, null, "'\\u00B0'", "'non-decreasing'", "'non-negative'", 
		"'subadditive'", "'convex'", "'concave'", "'left-continuous'", "'right-continuous'", 
		"'zero-at-zero'", "'ultimately-constant'", "'well-defined'", "'U'", "'Q'", 
		"'>='", "'<='", "'='", "'in'", null, "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, "CONV", "DECONV", "MAXPLUSCONV", "MAXPLUSDECONV", 
		"ADD", "SUB", "MIN", "MAX", "COMP", "NON_DECREASING", "NON_NEGATIVE", 
		"SUBADDITIVE", "CONVEX", "CONCAVE", "LEFT_CONTINUOUS", "RIGHT_CONTINUOUS", 
		"ZERO_AT_ZERO", "ULTIMATELY_CONSTANT", "WELL_DEFINED", "U_SET", "RATIONALS", 
		"GREATER_OR_EQUAL", "LESS_THAN_OR_EQUAL", "EQUAL", "IN", "ID", "SEMICOLON", 
		"NEWLINE", "WHITESPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "NetCalG.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static NetCalGParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public NetCalGParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public NetCalGParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class EquivalenceCatalogContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public EquivalenceContext[] equivalence() {
			return GetRuleContexts<EquivalenceContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public EquivalenceContext equivalence(int i) {
			return GetRuleContext<EquivalenceContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NEWLINE() { return GetTokens(NetCalGParser.NEWLINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE(int i) {
			return GetToken(NetCalGParser.NEWLINE, i);
		}
		public EquivalenceCatalogContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_equivalenceCatalog; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INetCalGVisitor<TResult> typedVisitor = visitor as INetCalGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEquivalenceCatalog(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EquivalenceCatalogContext equivalenceCatalog() {
		EquivalenceCatalogContext _localctx = new EquivalenceCatalogContext(Context, State);
		EnterRule(_localctx, 0, RULE_equivalenceCatalog);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 23;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 20;
				equivalence();
				State = 21;
				Match(NEWLINE);
				}
				}
				State = 25;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EquivalenceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NEWLINE() { return GetTokens(NetCalGParser.NEWLINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE(int i) {
			return GetToken(NetCalGParser.NEWLINE, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EquivalenceExpressionContext equivalenceExpression() {
			return GetRuleContext<EquivalenceExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HypothesisContext[] hypothesis() {
			return GetRuleContexts<HypothesisContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public HypothesisContext hypothesis(int i) {
			return GetRuleContext<HypothesisContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SEMICOLON() { return GetTokens(NetCalGParser.SEMICOLON); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON(int i) {
			return GetToken(NetCalGParser.SEMICOLON, i);
		}
		public EquivalenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_equivalence; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INetCalGVisitor<TResult> typedVisitor = visitor as INetCalGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEquivalence(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EquivalenceContext equivalence() {
		EquivalenceContext _localctx = new EquivalenceContext(Context, State);
		EnterRule(_localctx, 2, RULE_equivalence);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 27;
			Match(T__0);
			State = 28;
			Match(NEWLINE);
			State = 35;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ID) {
				{
				{
				State = 29;
				hypothesis();
				State = 30;
				Match(SEMICOLON);
				State = 31;
				Match(NEWLINE);
				}
				}
				State = 37;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 38;
			Match(T__1);
			State = 39;
			Match(T__2);
			State = 40;
			equivalenceExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EquivalenceExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CurveExpressionContext[] curveExpression() {
			return GetRuleContexts<CurveExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CurveExpressionContext curveExpression(int i) {
			return GetRuleContext<CurveExpressionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUAL() { return GetToken(NetCalGParser.EQUAL, 0); }
		public EquivalenceExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_equivalenceExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INetCalGVisitor<TResult> typedVisitor = visitor as INetCalGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEquivalenceExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EquivalenceExpressionContext equivalenceExpression() {
		EquivalenceExpressionContext _localctx = new EquivalenceExpressionContext(Context, State);
		EnterRule(_localctx, 4, RULE_equivalenceExpression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42;
			curveExpression(0);
			State = 43;
			Match(EQUAL);
			State = 44;
			curveExpression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HypothesisContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PlaceholderContext[] placeholder() {
			return GetRuleContexts<PlaceholderContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PlaceholderContext placeholder(int i) {
			return GetRuleContext<PlaceholderContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IN() { return GetToken(NetCalGParser.IN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SetContext set() {
			return GetRuleContext<SetContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropertyContext[] property() {
			return GetRuleContexts<PropertyContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropertyContext property(int i) {
			return GetRuleContext<PropertyContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONV() { return GetToken(NetCalGParser.CONV, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WELL_DEFINED() { return GetToken(NetCalGParser.WELL_DEFINED, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RelationalOperatorContext relationalOperator() {
			return GetRuleContext<RelationalOperatorContext>(0);
		}
		public HypothesisContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_hypothesis; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INetCalGVisitor<TResult> typedVisitor = visitor as INetCalGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHypothesis(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public HypothesisContext hypothesis() {
		HypothesisContext _localctx = new HypothesisContext(Context, State);
		EnterRule(_localctx, 6, RULE_hypothesis);
		int _la;
		try {
			State = 64;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 46;
				placeholder();
				State = 47;
				Match(IN);
				State = 48;
				set();
				State = 52;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 16744448L) != 0)) {
					{
					{
					State = 49;
					property();
					}
					}
					State = 54;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 55;
				placeholder();
				State = 56;
				Match(CONV);
				State = 57;
				placeholder();
				State = 58;
				Match(WELL_DEFINED);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 60;
				placeholder();
				State = 61;
				relationalOperator();
				State = 62;
				placeholder();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SetContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode U_SET() { return GetToken(NetCalGParser.U_SET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RATIONALS() { return GetToken(NetCalGParser.RATIONALS, 0); }
		public SetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_set; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INetCalGVisitor<TResult> typedVisitor = visitor as INetCalGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSet(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SetContext set() {
		SetContext _localctx = new SetContext(Context, State);
		EnterRule(_localctx, 8, RULE_set);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66;
			_la = TokenStream.LA(1);
			if ( !(_la==U_SET || _la==RATIONALS) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PlaceholderContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(NetCalGParser.ID, 0); }
		public PlaceholderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_placeholder; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INetCalGVisitor<TResult> typedVisitor = visitor as INetCalGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPlaceholder(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PlaceholderContext placeholder() {
		PlaceholderContext _localctx = new PlaceholderContext(Context, State);
		EnterRule(_localctx, 10, RULE_placeholder);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68;
			Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertyContext : ParserRuleContext {
		public PropertyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_property; } }
	 
		public PropertyContext() { }
		public virtual void CopyFrom(PropertyContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ZeroAtZeroPropertyContext : PropertyContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ZERO_AT_ZERO() { return GetToken(NetCalGParser.ZERO_AT_ZERO, 0); }
		public ZeroAtZeroPropertyContext(PropertyContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INetCalGVisitor<TResult> typedVisitor = visitor as INetCalGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitZeroAtZeroProperty(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NonNegativePropertyContext : PropertyContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NON_NEGATIVE() { return GetToken(NetCalGParser.NON_NEGATIVE, 0); }
		public NonNegativePropertyContext(PropertyContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INetCalGVisitor<TResult> typedVisitor = visitor as INetCalGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNonNegativeProperty(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RightContinuousPropertyContext : PropertyContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RIGHT_CONTINUOUS() { return GetToken(NetCalGParser.RIGHT_CONTINUOUS, 0); }
		public RightContinuousPropertyContext(PropertyContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INetCalGVisitor<TResult> typedVisitor = visitor as INetCalGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRightContinuousProperty(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NonDecreasingPropertyContext : PropertyContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NON_DECREASING() { return GetToken(NetCalGParser.NON_DECREASING, 0); }
		public NonDecreasingPropertyContext(PropertyContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INetCalGVisitor<TResult> typedVisitor = visitor as INetCalGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNonDecreasingProperty(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class UltimatelyConstantContext : PropertyContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ULTIMATELY_CONSTANT() { return GetToken(NetCalGParser.ULTIMATELY_CONSTANT, 0); }
		public UltimatelyConstantContext(PropertyContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INetCalGVisitor<TResult> typedVisitor = visitor as INetCalGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUltimatelyConstant(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ConvexPropertyContext : PropertyContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONVEX() { return GetToken(NetCalGParser.CONVEX, 0); }
		public ConvexPropertyContext(PropertyContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INetCalGVisitor<TResult> typedVisitor = visitor as INetCalGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConvexProperty(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class SubadditivePropertyContext : PropertyContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SUBADDITIVE() { return GetToken(NetCalGParser.SUBADDITIVE, 0); }
		public SubadditivePropertyContext(PropertyContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INetCalGVisitor<TResult> typedVisitor = visitor as INetCalGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSubadditiveProperty(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ConcavePropertyContext : PropertyContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONCAVE() { return GetToken(NetCalGParser.CONCAVE, 0); }
		public ConcavePropertyContext(PropertyContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INetCalGVisitor<TResult> typedVisitor = visitor as INetCalGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConcaveProperty(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LeftContinuousPropertyContext : PropertyContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LEFT_CONTINUOUS() { return GetToken(NetCalGParser.LEFT_CONTINUOUS, 0); }
		public LeftContinuousPropertyContext(PropertyContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INetCalGVisitor<TResult> typedVisitor = visitor as INetCalGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLeftContinuousProperty(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropertyContext property() {
		PropertyContext _localctx = new PropertyContext(Context, State);
		EnterRule(_localctx, 12, RULE_property);
		try {
			State = 79;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NON_DECREASING:
				_localctx = new NonDecreasingPropertyContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 70;
				Match(NON_DECREASING);
				}
				break;
			case NON_NEGATIVE:
				_localctx = new NonNegativePropertyContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 71;
				Match(NON_NEGATIVE);
				}
				break;
			case SUBADDITIVE:
				_localctx = new SubadditivePropertyContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 72;
				Match(SUBADDITIVE);
				}
				break;
			case CONVEX:
				_localctx = new ConvexPropertyContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 73;
				Match(CONVEX);
				}
				break;
			case CONCAVE:
				_localctx = new ConcavePropertyContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 74;
				Match(CONCAVE);
				}
				break;
			case LEFT_CONTINUOUS:
				_localctx = new LeftContinuousPropertyContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 75;
				Match(LEFT_CONTINUOUS);
				}
				break;
			case RIGHT_CONTINUOUS:
				_localctx = new RightContinuousPropertyContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 76;
				Match(RIGHT_CONTINUOUS);
				}
				break;
			case ZERO_AT_ZERO:
				_localctx = new ZeroAtZeroPropertyContext(_localctx);
				EnterOuterAlt(_localctx, 8);
				{
				State = 77;
				Match(ZERO_AT_ZERO);
				}
				break;
			case ULTIMATELY_CONSTANT:
				_localctx = new UltimatelyConstantContext(_localctx);
				EnterOuterAlt(_localctx, 9);
				{
				State = 78;
				Match(ULTIMATELY_CONSTANT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
